<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/surname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_surname"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/age_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_age"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/license_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_license_type"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/qr_code_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/generate_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/generate_qr_code" />

</LinearLayout>